# pyamg

./: .gitignore  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
pyamg/: __init__.py
pyamg/_tools/: _tester.py
pyamg/amg_core/: __init__.py  adaptive_relaxation.h  adaptive_relaxation_bind.cpp  generate.sh  instantiate.yml  linalg.h  relaxation.h  relaxation_bind.cpp
pyamg/relaxation/: relaxation.py  smoothing.py
pyamg/schwarz/: README.md  REFACTOR_PLAN.md  __init__.py  least_squares_dd.py  least_squares_dd_exp.py
pyamg/schwarz/lsdd/: __init__.py  aggregation.py  eigs.py  hierarchy.py  local_ops.py  smoothers.py  stats.py  subdomains.py  types.py
pyamg/tests/schwarz/: bench_lsdd.py  test_lsdd_compare.py  test_lsdd_contracts.py
pyamg/tests/schwarz/data/: B_n16641.npz  B_n4225.npz  B_n66049.npz
