
[options]
zip_safe = False
include_package_data = False
packages = find:
platforms = any
python_requires = >=3.9
install_requires =
    numpy
    scipy>=1.11.0
tests_require =
    pytest>=2

[options.packages.find]
exclude =
    docs
    README-DEV.md

[options.package_data]
pyamg =
    gallery/example_data/*.mat
    gallery/mesh_data/*.npz

[pycodestyle]
ignore = E226
exclude = amg_core.py

[coverage:run]
branch = True

[coverage:report]
omit =
    *tests/*
    *__init__.py
    setup.py
    pyamg/version.py
    pyamg/amg_core/bindthem.py
    pyamg/gallery/demo.py
